# cpp_backend

./: .gitignore  CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  main.cpp
include/: CalcResourceFactory.h  CalcService.h  CalcServiceSettingsFactory.h  IService.h  IServiceSettingsFactory.h
